<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.PopularFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="false"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main"
            android:paddingBottom="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/appName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_medium"
                    android:text="@string/Movie"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_bold"
                    android:text="@string/Catalog"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@id/appName2"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btnSetting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:contentDescription="@string/setting"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/avenir_medium"
                android:minWidth="200dp"
                android:paddingBottom="20dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="210dp"
            android:background="@drawable/rounded_top"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_more_pink"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/popular_movies"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="8dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_movie"
                android:layout_width="wrap_content"
                android:layout_height="310dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="00dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular"
                tools:listitem="@layout/item_popular_movie">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_popular_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/ic_more_pink"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/popular_tv_shows"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_popular_movie" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_tv"
                android:layout_width="wrap_content"
                android:layout_height="310dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular_tv"
                tools:listitem="@layout/item_popular_movie">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>