<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_darker"
    android:fillViewport="true"
    tools:context=".activity.DetailMovieActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/title_movie"
            android:minHeight="270dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:11.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster" />


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/roundedcorner"
            android:contentDescription="@string/back"
            android:padding="7dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite_border"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:animateLayoutChanges="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            app:cardCornerRadius="16dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="135dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/avenir_demi"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/welcome" />

                <TextView
                    android:id="@+id/tv_realease_year"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/avenir_demi"
                    android:textColor="@color/white_darker"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="@string/realise" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/avenir_medium"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realease_year"
                    tools:text="4.5" />

                <RatingBar
                    android:id="@+id/rb_userrating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:numStars="1"
                    android:paddingBottom="10dp"
                    android:progressTint="@android:color/holo_orange_dark"
                    android:rating="1"
                    app:layout_constraintStart_toEndOf="@id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realease_year" />

                <TextView
                    android:id="@+id/tv_voter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/avenir_medium"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white_darker"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@id/rb_userrating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realease_year"
                    tools:text="4.5/5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="285dp"
            android:background="@color/white"
            android:paddingTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/Title"
                android:textColor="@color/black_main"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="0dp"
                android:paddingEnd="26dp"
                android:textColor="@color/black_sub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_desc"
                tools:text="@string/welcome" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/overview"
                android:textColor="@color/black_main"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_text" />

            <TextView
                android:id="@+id/tv_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/avenir_medium"
                android:paddingStart="0dp"
                android:paddingEnd="26dp"
                android:textColor="@color/black_sub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                tools:text="@string/welcome" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/genre"
                android:textColor="@color/black_main"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_text" />

            <TextView
                android:id="@+id/tv_genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/avenir_medium"
                android:textColor="@color/black_sub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                tools:text="@string/genres" />

            <TextView
                android:id="@+id/tv_realease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_demi"
                android:text="@string/first_realise"
                android:textColor="@color/black_main"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_text" />

            <TextView
                android:id="@+id/tv_realease_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/avenir_medium"
                android:textColor="@color/black_sub"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_realease"
                tools:text="@string/realise" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="@+id/img_poster"
            app:layout_constraintStart_toStartOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="@+id/img_poster" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="13dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_poster2"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:contentDescription="@string/title_movie"
                android:scaleType="centerCrop"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/poster" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>